<?xml version="1.0"?>
<package format="2">
    <name>moving_to_object</name>
    <version>0.0.0</version>
    <description>The moving_to_object package</description>
    <maintainer email="we@mail.ru">we</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>

    <export>
    </export>
</package>
